--- a/design.html
+++ b/design.html
@@ -82,7 +82,7 @@
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <a href="gallery-balance.html"><img class="img-responsive" src="images/Balance-page-001.JPG" alt=""></a>
+                    <a href="gallery-balance.html"><img class="img-responsive" src="images/Balance-page-001.jpg" alt=""></a>
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
