--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				    <!-- Wrapper for slides -->
 				    <div class="carousel-inner" role="listbox">
 				      <div class="item active">
-				        <img src="images/Rhythm-page-001.JPG" alt="Chania" width="460" height="345">
+				        <img src="images/Rhythm-page-001.jpg" alt="Chania" width="460" height="345">
 				        	<div class="carousel-caption">
 				        	<h3>Design</h3>
 				        	<p>My graphic design work for posters and gift cards</p>
@@ -140,7 +140,7 @@
 				      </div>
 
 				      <div class="item">
-				        <img src="images/video.JPG" alt="Chania" width="460" height="345">
+				        <img src="images/video.jpg" alt="Chania" width="460" height="345">
 				        	<div class="carousel-caption">
 				        	<h3>Videos</h3>
 				        	<p>A collection of my video work from my Youtube page.</p>
