--- a/design.html
+++ b/design.html
@@ -82,22 +82,22 @@
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                    <a href="gallery-balance.html"><img class="img-responsive" src="images/Balance-page-001.JPG" alt=""></a>
+                    <a href="gallery-balance.html"><img class="img-responsive" src="images/Balance-page-001.jpg" alt=""></a>
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                <a href="gallery-contrast.html"><img class="img-responsive" src="images/Contrast-page-001.JPG" alt=""></a>
+                <a href="gallery-contrast.html"><img class="img-responsive" src="images/Contrast-page-001.jpg" alt=""></a>
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                <a href="gallery-figureandground.html"><img class="img-responsive" src="images/FigureandGround-page-001.JPG" alt=""></a>
+                <a href="gallery-figureandground.html"><img class="img-responsive" src="images/FigureandGround-page-001.jpg" alt=""></a>
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
-                <a href="gallery-rhythm.html"><img class="img-responsive" src="images/Rhythm-page-001.JPG" alt=""></a>
+                <a href="gallery-rhythm.html"><img class="img-responsive" src="images/Rhythm-page-001.jpg" alt=""></a>
                 </a>
             </div>
 
