--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 <br>
 <br>
 <br>
-    <img class="center" src="images/12821454_1032403433485494_5523408900178151157_n.JPG" alt="profile" align="middle">
+    <img class="center" src="images/12821454_1032403433485494_5523408900178151157_n.jpg" alt="profile" align="middle">
 
 <div class="description">
 <h1>About</h1>
