--- a/gallery-contrast.html
+++ b/gallery-contrast.html
@@ -88,7 +88,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="images/Contrast-page-001.JPG" alt="">
+                <img class="img-responsive" src="images/Contrast-page-001.jpg" alt="">
             </div>
 
             <div class="col-md-4">
@@ -113,19 +113,19 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <a href="gallery-balance.html"><img class="img-responsive portfolio-item" src="images/Balance-page-001.JPG" alt=""></a>
+                    <a href="gallery-balance.html"><img class="img-responsive portfolio-item" src="images/Balance-page-001.jpg" alt=""></a>
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <a href="gallery-figureandground.html"><img class="img-responsive portfolio-item" src="images/FigureandGround-page-001.JPG" alt=""></a>
+                    <a href="gallery-figureandground.html"><img class="img-responsive portfolio-item" src="images/FigureandGround-page-001.jpg" alt=""></a>
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <a href="gallery-rhythm.html"><img class="img-responsive portfolio-item" src="images/Rhythm-page-001.JPG" alt=""></a>
+                    <a href="gallery-rhythm.html"><img class="img-responsive portfolio-item" src="images/Rhythm-page-001.jpg" alt=""></a>
                 </a>
             </div>
 
