--- a/gallery-photo-2.html
+++ b/gallery-photo-2.html
@@ -125,7 +125,7 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <a href="gallery-rhythm.html"><img class="img-responsive portfolio-item" src="images/DSC_0140.JPG" alt=""></a>
+                    <a href="gallery-photo-4.html"><img class="img-responsive portfolio-item" src="images/DSC_0140.JPG" alt=""></a>
                 </a>
             </div>
 
